--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
     "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
-    "eslint": "eslint . --ext ts",
+    "eslint": "eslint .",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
     "swiftlint": "node-swiftlint",
     "docgen": "docgen --api AbsoluteOrientationPlugin --output-readme README.md --output-json dist/docs.json",
@@ -50,25 +50,24 @@
     "@capacitor/core": "^7.4.3",
     "@capacitor/docgen": "^0.3.0",
     "@capacitor/ios": "^7.4.3",
-    "@ionic/eslint-config": "^0.4.0",
+    "@eslint/compat": "^1.4.0",
     "@ionic/prettier-config": "^4.0.0",
     "@ionic/swiftlint-config": "^2.0.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
     "prettier-plugin-java": "^2.7.5",
     "rimraf": "^6.0.1",
     "rollup": "^4.52.2",
     "swiftlint": "^2.0.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.44.1"
   },
   "peerDependencies": {
     "@capacitor/core": ">=7.0.0"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
-  "eslintConfig": {
-    "extends": "@ionic/eslint-config/recommended"
-  },
   "capacitor": {
     "ios": {
       "src": "ios"
